# Sistema_Asistencia_CONCEPMI

./: .gitignore  API_ENDPOINTS.md  APPSCRIPT_FINAL.gs  APPSCRIPT_VALIDACION_TIEMPO.js  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  test_completo.py
static/css/: style.css
static/js/: main.js
templates/: base.html  export.html  index.html  register.html  sessions.html
